--- a/experiments/hydra-configs/opt-inf-nodes.ipynb
+++ b/experiments/hydra-configs/opt-inf-nodes.ipynb
@@ -46,7 +46,7 @@
     "    multilabel_utterance_records=[],\n",
     "    test_utterance_records=[],\n",
     "    device=\"cpu\",\n",
-    "    mode=\"multiclass_as_multilabel\",\n",
+    "    mode=\"multiclass\",\n",
     "    multilabel_generation_config=\"\",\n",
     "    db_dir=db_dir,\n",
     "    regex_sampling=0,\n",
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "retrieval_optimizer_config = {\n",
-    "    'metric': 'retrieval_hit_rate_intersecting',\n",
+    "    'metric': 'retrieval_hit_rate',\n",
     "    'node_type': 'retrieval',\n",
     "    'search_space': [\n",
     "        {\n",
@@ -116,17 +116,23 @@
     "    'metric': 'scoring_roc_auc',\n",
     "    'node_type': 'scoring',\n",
     "    'search_space': [\n",
+    "        # {\n",
+    "        #     'k': [3],\n",
+    "        #     'module_type': 'knn',\n",
+    "        #     'weights': ['uniform', 'distance', 'closest']\n",
+    "        # },\n",
+    "        # {\n",
+    "        #     'module_type': 'linear'\n",
+    "        # },\n",
+    "        # {\n",
+    "        #     \"module_type\": \"mlknn\",\n",
+    "        #     \"k\": [5]\n",
+    "        # },\n",
     "        {\n",
-    "            'k': [3],\n",
-    "            'module_type': 'knn',\n",
-    "            'weights': ['uniform', 'distance', 'closest']\n",
-    "        },\n",
-    "        {\n",
-    "            'module_type': 'linear'\n",
-    "        },\n",
-    "        {\n",
-    "            \"module_type\": \"mlknn\",\n",
-    "            \"k\": [5]\n",
+    "            \"module_type\": \"dnnc\",\n",
+    "            \"model_name\": [\"cross-encoder/ms-marco-MiniLM-L-6-v2\"],\n",
+    "            \"k\": [3],\n",
+    "            \"train_head\": [False, True]\n",
     "        }\n",
     "    ]\n",
     "}"
@@ -283,7 +289,7 @@
       "\n",
       "==== vector_db ====\n",
       "\n",
-      "[[0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 1, 0], [0, 1, 0], [1, 0, 0], [0, 1, 0], [0, 1, 0], [1, 0, 0]] [np.float32(0.477605), np.float32(0.49597514), np.float32(0.50022346), np.float32(0.5128485), np.float32(0.55573064), np.float32(0.5758226), np.float32(0.58933824), np.float32(0.6130637), np.float32(0.6174678), np.float32(0.63502705)] ['please set an alarm for mid day', 'make sure my alarm is set for three thirty in the morning', 'have an alarm set for three in the morning', 'wake me up at noon tomorrow', 'i think my account is blocked but i do not know the reason', 'can you tell me why is my bank account frozen', 'can i make a reservation for redrobin', 'why is there a hold on my capital one checking account', 'why is there a hold on my american saving bank account', 'are reservations taken at redrobin']\n"
+      "[2, 2, 2, 2, 1, 1, 1, 0, 1, 0] [np.float32(0.477605), np.float32(0.4929347), np.float32(0.49597514), np.float32(0.50022346), np.float32(0.553351), np.float32(0.55573064), np.float32(0.5758226), np.float32(0.60500944), np.float32(0.6174678), np.float32(0.67098904)] ['please set an alarm for mid day', 'set my alarm for getting up', 'make sure my alarm is set for three thirty in the morning', 'have an alarm set for three in the morning', 'i am nost sure why my account is blocked', 'i think my account is blocked but i do not know the reason', 'can you tell me why is my bank account frozen', 'is it possible to make a reservation at redrobin', 'why is there a hold on my american saving bank account', 'does redrobin take reservations']\n"
      ]
     }
    ],
@@ -317,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -325,30 +331,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "==== knn ====\n",
+      "==== dnnc ====\n",
       "\n",
-      "[[0. 0. 1.]\n",
-      " [0. 0. 1.]]\n",
+      "[[  0.           0.         -10.27686977]\n",
+      " [  0.           0.         -10.98405933]]\n",
       "\n",
-      "==== knn ====\n",
+      "==== dnnc ====\n",
       "\n",
-      "[[0.         0.         1.        ]\n",
-      " [0.         0.         0.99999998]]\n",
-      "\n",
-      "==== knn ====\n",
-      "\n",
-      "[[0.         0.         0.7611975 ]\n",
-      " [0.         0.         0.73897344]]\n",
-      "\n",
-      "==== linear ====\n",
-      "\n",
-      "[[0.27486506 0.31681463 0.37459106]\n",
-      " [0.2769358  0.31536099 0.37366978]]\n",
-      "\n",
-      "==== mlknn ====\n",
-      "\n",
-      "[[0.08860759 0.1147541  0.79545455]\n",
-      " [0.08860759 0.1147541  0.79545455]]\n"
+      "[[0.         0.         0.18697797]\n",
+      " [0.         0.         0.07185777]]\n"
      ]
     }
    ],
