--- a/experiments/python-node-optimization/testbed.ipynb
+++ b/experiments/python-node-optimization/testbed.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,12 +21,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load datasets"
+    "## Replicate full-fledged optimization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +42,7 @@
        "(165, 57)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,12 +60,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Search Space"
+    "### Define Search Space"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,19 +108,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Optional] Configure Your Run"
+    "### [Optional] Configure Your Run"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from autointent.configs.optimization_cli import LoggingConfig, VectorIndexConfig, EmbedderConfig\n",
     "from pathlib import Path\n",
     "\n",
-    "pipeline_optimizer.set_config(LoggingConfig(run_name=\"sweet_cucumber\", dirpath=Path(\".\").resolve(), dump_modules=False))\n",
+    "pipeline_optimizer.set_config(LoggingConfig(run_name=\"sweet_cucumber\", dirpath=Path.cwd(), dump_modules=True, clear_ram=True))\n",
     "pipeline_optimizer.set_config(VectorIndexConfig(db_dir=Path(\"./my_vector_db\").resolve(), device=\"cuda\"))\n",
     "pipeline_optimizer.set_config(EmbedderConfig(batch_size=16, max_length=32))"
    ]
@@ -112,31 +129,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run Optimization"
+    "### Run Optimization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-11-05 18:08:17,123] A new study created in memory with name: no-name-5066322d-4fcd-4a17-8699-c3670e71e698\n"
+      "[I 2024-11-06 13:10:03,339] A new study created in memory with name: no-name-85c71fe7-cc94-448b-a9a0-46470688fb6b\n"
      ]
     }
    ],
    "source": [
-    "context = pipeline_optimizer.optimize_from_dataset(scoring_dataset, prediction_dataset) # data with partitions: train_1, train_2, val_1, val_2, test"
+    "context = pipeline_optimizer.optimize_from_dataset(scoring_dataset, prediction_dataset)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save Logs"
+    "### Save Logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context.dump()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run Inference"
    ]
   },
   {
@@ -145,7 +178,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context.dump()"
+    "from autointent.pipeline.inference import InferencePipeline\n",
+    "\n",
+    "inference_pipeline = InferencePipeline.from_context(context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inference_pipeline.predict([\"hello world\", \"what is the eagles address\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## No modules dumping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    }
+   ],
+   "source": [
+    "! rm -rf sweet_cucumber*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_optimizer.set_config(LoggingConfig(dump_modules=False, clear_ram=False))\n",
+    "pipeline_optimizer.set_config(VectorIndexConfig(db_dir=Path(\"./my_vector_db\").resolve(), device=\"cuda\"))\n",
+    "pipeline_optimizer.set_config(EmbedderConfig(batch_size=16, max_length=32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context = pipeline_optimizer.optimize_from_dataset(scoring_dataset, prediction_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inference_pipeline = InferencePipeline.from_context(context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inference_pipeline.predict([\"hello world\", \"what is the eagles address\"])"
    ]
   }
  ],
